--- a/aulas/intermediario/css-intermediario/08-background/style.css
+++ b/aulas/intermediario/css-intermediario/08-background/style.css
@@ -28,12 +28,15 @@ p {
     height: 540px;
 }
 
-/* .bg-fixed {
-    background-attachment:;
+.bg-fixed {
+    background-attachment: fixed;
     height: 540px;
-} */
+}
 
-/* .bg-position {
-    background-position: left;
+.bg-position {
+    /* background-position: bottom right;
+    background-repeat: no-repeat; */
     height: 540px;
-} */
+
+    background: #000 url('./images/cat.png') no-repeat right top;
+}
