--- a/aulas/intermediario/css-intermediario/08-background/style.css
+++ b/aulas/intermediario/css-intermediario/08-background/style.css
@@ -39,4 +39,6 @@ p {
     height: 540px;
 
     background: #000 url('./images/cat.png') no-repeat right top;
+    /* é possível passar todos os estilos em um comando,
+    primeiro será a cor aplicada, depois podemos adicionar uma url/link, em terceiro se irá repetir, por último, seu posicionamento que é passado no eixo X e depois Y da div/classe */
 }
