--- a/aulas/intermediario/css-intermediario/09-display/style.css
+++ b/aulas/intermediario/css-intermediario/09-display/style.css
@@ -32,7 +32,10 @@ ul {
     height: 100px;
 }
 
-/* .esconder {
+.esconder {
     display: none;
-} */
+    background: aqua;
+    width: 100px;
+    height: 100px;
+}
 
