--- a/aulas/intermediario/css-intermediario/12-responsividade/style.css
+++ b/aulas/intermediario/css-intermediario/12-responsividade/style.css
@@ -24,5 +24,21 @@ body {
 main {
     background-color: #fff;
     padding: 30px;
-    
+    min-width: 320px;
+    max-width: 900px;
+    margin: 0 auto;
 }
+
+main .info {
+    font-size: 18px;
+}
+
+main p {
+    font-size: 16px;
+}
+
+.image img {
+    width: 100%;
+    height: 100%;
+}
+
