pseudo elementos no css para estiliar

--- a/aulas/avancado/css-avancado/02-pseudo-elementos/style.css
+++ b/aulas/avancado/css-avancado/02-pseudo-elementos/style.css
@@ -25,3 +25,19 @@ li::marker{
     color: red;
     font-size:24px;
 }
+
+.imagem-antes-titulo::before{
+    content: "";
+    background: url(thumb.jpg) center center no-repeat;
+    display: inline-block;
+    width: 85px;
+    height: 85px;
+}
+
+.imagem-depois-titulo::after{
+    content: "";
+    background: url(thumb.jpg) center center no-repeat;
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+}
