--- a/aulas/avancado/css-avancado/04-transform/style.css
+++ b/aulas/avancado/css-avancado/04-transform/style.css
@@ -1,3 +1,31 @@
 * { 
     padding: 0;
 }
+
+img {
+    width: 200px;
+}
+
+img.scale{
+    transform: scale(1, 1);
+}
+
+img.rotate{
+    transform: rotate(90deg);
+}
+
+img.translate{
+    transform: translate(100px, 15px);
+}
+
+div.escala{
+    background-color: coral;
+}
+
+div.rodar{
+    background-color: darkgrey;
+}
+
+div.deslocar{
+    background-color: firebrick;
+}
